tests/neg/unsound-reach.check
-- Error: tests/neg/unsound-reach.scala:18:9 ---------------------------------------------------------------------------
18 |    boom.use(f): (f1: File^{backdoor*}) => // error
   |    ^^^^^^^^
   |    Reach capability backdoor* and universal capability cap cannot both
   |    appear in the type (x: File^)(op: box File^{backdoor*} => Unit): Unit of this expression
